--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,12 @@ body {
 body {
     scrollbar-color: rgb(21, 21, 21) black;
 }
+
+.swiper-slide-active a {
+    opacity: 100%;
+}
+
+.swiper-slide a:not(.swiper-slide-active a) {
+    opacity: 0;
+    transition: all 0.5s;
+}
